Remove extra padding from header title

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <header class=" bg-cover bg-center h-screen py-9 lg:py-0 md:h-screen relative" style="background-image: url('/assest/images/hotel-hero.jpg');">
         <div class="absolute inset-0 bg-black opacity-50"></div>
         <div class=" hero-content relative z-10 text-white">
-            <h1 class=" text-[34px] lg:text-[60px] pt-3   font-extrabold px-[18px]  lg:px-[150px] mb-3 lg:mb-4">Welcome to Brokers Hotel</h1>
+            <h1 class=" text-[34px] lg:text-[60px]    font-extrabold px-[18px]  lg:px-[150px] mb-3 lg:mb-4">Welcome to Brokers Hotel</h1>
             <p class=" text-[14px] lg:text-xl mb-5 px-[14px] lg:px-[250px]">Relax, unwind, and make lasting memories. Experience unmatched comfort, luxury, and warm hospitality </p>
             <a href="#rooms" class="scroll-animation translate-2.5 hero-btn text-[15px] lg:text-[20px] bg-yellow-700 rounded-[25px] lg:rounded-[35px] py-2 px-6  lg:py-4 lg:px-9">Explore Rooms</a>
         </div>
