Enhance about section with background image and text color
Updated the about section with a background image and improved text color for better readability.

--- a/src/about.html
+++ b/src/about.html
@@ -119,10 +119,10 @@
 
 
     <!-- About Section -->
-    <section id="about" class="  py-15 md:py-37 px-6 md:px-46 bg-gray-50">
+    <section id="about" class="  py-15 md:py-37 px-6 md:px-46 bg-gray-50" style="background-image: url('/assest/images/hotel-hero.jpg');">
         <div  class="  max-w-7xl mx-auto  ">
-            <h2 class="text-3xl md:text-5xl font-bold mb-8 ">About <span class="underline text-yellow-700">Us</span></h2>
-            <p class="text-[14px] md:text-[18px] pb-20 md:pb-[134px] text-gray-600 ">Experience unmatched comfort, luxury, and warm hospitality in the heart of the city.
+            <h2 class="text-3xl text-white md:text-5xl font-bold mb-8 ">About <span class="underline text-yellow-700">Us</span></h2>
+            <p class="text-[14px] md:text-[18px] pb-20 md:pb-[134px] text-gray-50 ">Experience unmatched comfort, luxury, and warm hospitality in the heart of the city.
 Relax in our elegant rooms, enjoy world-class dining, and unwind by our serene poolside.
 Whether you’re here for business or leisure, every stay is designed to make you feel special.</p>
             <div class="about-section">
