Update image source for 'What Makes Us Different'

--- a/src/about.html
+++ b/src/about.html
@@ -149,7 +149,7 @@ Whether you’re here for business or leisure, every stay is designed to make yo
 
                 <!-- What Makes Us Different -->
                 <div class="scroll-animation about-card">
-                    <img src="/assest/images/UIUX starategyy1.jpg" alt="What Makes Us Different" class="about-image">
+                    <img src="/assest/images/UIUX different.jpg" alt="What Makes Us Different" class="about-image">
                     <h3>What Makes Us Different</h3>
                     <p class=" text-gray-700 text-[14px] md:text-[16.5px]">We’re not just a place to stay—we're a destination. With a focus on sustainability, innovative services, and a prime location, we offer a unique experience that you won’t find anywhere else.</p>
                 </div>
