--- a/src/about.html
+++ b/src/about.html
@@ -130,28 +130,28 @@ Whether you’re here for business or leisure, every stay is designed to make yo
                 <div class="scroll-animation about-card ">
                     <img src="/assest/images/how-we-operate.jpg" alt="How We Operate" class="about-image">
                     <h3>How We Operate</h3>
-                    <p class="text-[15px] md:text-[16.5px] text-gray-700">At Hotel XYZ, we focus on providing personalized service. Our team is dedicated to ensuring you have an exceptional stay with us, from check-in to check-out.</p>
+                    <p class="text-[15px] md:text-[16.5px] text-gray-600">At Hotel XYZ, we focus on providing personalized service. Our team is dedicated to ensuring you have an exceptional stay with us, from check-in to check-out.</p>
                 </div>
 
                 <!-- Our History -->
                 <div class="scroll-animation about-card">
                     <img src="/assest/images/our-history.jpg" alt="Our History" class="about-image">
                     <h3>Our History</h3>
-                    <p class="text-gray-700 text-[15px] md:text-[16.5px]">Founded in 1990, Hotel XYZ has a long legacy of excellence. We've evolved from a small family-owned business into one of the most trusted hotels in the region.</p>
+                    <p class="text-gray-500 text-[15px] md:text-[16.5px]">Founded in 1990, Hotel XYZ has a long legacy of excellence. We've evolved from a small family-owned business into one of the most trusted hotels in the region.</p>
                 </div>
 
                 <!-- What We Offer -->
                 <div class="scroll-animation about-card">
                     <img src="/assest/images/we-offer.jpg" alt="What We Offer" class="about-image">
                     <h3>What We Offer</h3>
-                    <p class="text-gray-700 text-[15px] md:text-[16.5px]">From luxurious rooms to gourmet dining, our hotel offers the best amenities for both business and leisure travelers. Experience comfort, elegance, and convenience.</p>
+                    <p class="text-gray-600 text-[15px] md:text-[16.5px]">From luxurious rooms to gourmet dining, our hotel offers the best amenities for both business and leisure travelers. Experience comfort, elegance, and convenience.</p>
                 </div>
 
                 <!-- What Makes Us Different -->
                 <div class="scroll-animation about-card">
-                    <img src="/assest/images/ different.jpg" alt="What Makes Us Different" class="about-image">
+                    <img src="/assest/images/different.jpg" alt="What Makes Us Different" class="about-image">
                     <h3>What Makes Us Different</h3>
-                    <p class=" text-gray-700 text-[15px] md:text-[16.5px]">We’re not just a place to stay—we're a destination. With a focus on sustainability, innovative services, and a prime location, we offer a unique experience that you won’t find anywhere else.</p>
+                    <p class=" text-gray-600 text-[15px] md:text-[16.5px]">We’re not just a place to stay—we're a destination. With a focus on sustainability, innovative services, and a prime location, we offer a unique experience that you won’t find anywhere else.</p>
                 </div>
             </div>
         </div>
@@ -193,17 +193,17 @@ Whether you’re here for business or leisure, every stay is designed to make yo
                     
                     <img src="/assest/images/dinning.jpg" alt="Dining" class="about-image">
                     <h3>Our Dining Experience</h3>
-                    <p class="text-gray-700 text-[15px] md:text-[16.5px]">Indulge in our gourmet dining options, offering a range of international and local delicacies. From fine dining to casual meals, our restaurants cater to every taste and preference.</p>
+                    <p class="text-gray-600 text-[15px] md:text-[16.5px]">Indulge in our gourmet dining options, offering a range of international and local delicacies. From fine dining to casual meals, our restaurants cater to every taste and preference.</p>
                 </div>
                 <div class="scroll-animation about-card">
                     <img src="/assest/images/bristro.jpg" alt="Restaurant" class="about-image">
                     <h3>The Bistro</h3>
-                    <p class="text-gray-700 text-[15px] md:text-[16.5px]">Enjoy a relaxed dining experience at The Bistro, our signature restaurant offering fresh, seasonal dishes paired with an extensive wine list.</p>
+                    <p class="text-gray-600 text-[15px] md:text-[16.5px]">Enjoy a relaxed dining experience at The Bistro, our signature restaurant offering fresh, seasonal dishes paired with an extensive wine list.</p>
                 </div>
                 <div class="scroll-animation about-card">
                     <img src="/assest/images/rooftop.jpg" alt="Bar" class="about-image">
                     <h3>Rooftop Bar</h3>
-                    <p class="text-gray-700 text-[15px] md:text-[16.5px]">Unwind with stunning views of the city skyline while sipping on crafted cocktails at our rooftop bar. A perfect place to relax after a day of sightseeing or business meetings.</p>
+                    <p class="text-gray-600 text-[15px] md:text-[16.5px]">Unwind with stunning views of the city skyline while sipping on crafted cocktails at our rooftop bar. A perfect place to relax after a day of sightseeing or business meetings.</p>
                 </div>
             </div>
         </div>
@@ -217,17 +217,17 @@ Whether you’re here for business or leisure, every stay is designed to make yo
                 <div class="scroll-animation about-card">
                     <img src="/assest/images/resturant.jpg" alt="Spa" class="about-image">
                     <h3>Relax & Rejuvenate</h3>
-                    <p class="text-gray-700 text-[15px] md:text-[16.5px]">Our wellness center offers a range of luxurious spa treatments, including massages, facials, and body therapies designed to soothe your mind and body.</p>
+                    <p class="text-gray-600 text-[15px] md:text-[16.5px]">Our wellness center offers a range of luxurious spa treatments, including massages, facials, and body therapies designed to soothe your mind and body.</p>
                 </div>
                 <div class="scroll-animation about-card">
                     <img src="/assest/images/fitness center.jpg" alt="Fitness Center" class="about-image">
                     <h3>Fitness Center</h3>
-                    <p class="text-gray-700 text-[15px] md:text-[16.5px]">Maintain your fitness routine while staying with us at our state-of-the-art fitness center. Equipped with the latest exercise equipment, it's perfect for keeping active during your stay.</p>
+                    <p class="text-gray-600 text-[15px] md:text-[16.5px]">Maintain your fitness routine while staying with us at our state-of-the-art fitness center. Equipped with the latest exercise equipment, it's perfect for keeping active during your stay.</p>
                 </div>
                 <div class="scroll-animation about-card">
                     <img src="/assest/images/swimming-pool.jpg" alt="Pool" class="about-image">
                     <h3>Swimming Pool</h3>
-                    <p class="text-gray-700 text-[15px] md:text-[16.5px]">Relax and unwind by our outdoor swimming pool, offering a tranquil environment with comfortable loungers and poolside service for refreshments.</p>
+                    <p class="text-gray-600 text-[15px] md:text-[16.5px]">Relax and unwind by our outdoor swimming pool, offering a tranquil environment with comfortable loungers and poolside service for refreshments.</p>
                 </div>
             </div>
         </div>
