--- a/src/about.html
+++ b/src/about.html
@@ -130,14 +130,14 @@ Whether you’re here for business or leisure, every stay is designed to make yo
                 <div class="scroll-animation about-card ">
                     <img src="/assest/images/how-we-operate.jpg" alt="How We Operate" class="about-image">
                     <h3>How We Operate</h3>
-                    <p class="text-[15px] md:text-[16.5px] text-gray-600">At Hotel XYZ, we focus on providing personalized service. Our team is dedicated to ensuring you have an exceptional stay with us, from check-in to check-out.</p>
+                    <p class="text-[15px] md:text-[16.5px] text-gray-600">At Brockers Hotel, we focus on providing personalized service. Our team is dedicated to ensuring you have an exceptional stay with us, from check-in to check-out.</p>
                 </div>
 
                 <!-- Our History -->
                 <div class="scroll-animation about-card">
                     <img src="/assest/images/our-history.jpg" alt="Our History" class="about-image">
                     <h3>Our History</h3>
-                    <p class="text-gray-500 text-[15px] md:text-[16.5px]">Founded in 1990, Hotel XYZ has a long legacy of excellence. We've evolved from a small family-owned business into one of the most trusted hotels in the region.</p>
+                    <p class="text-gray-500 text-[15px] md:text-[16.5px]">Founded in 1990, Brockers Hotel has a long legacy of excellence. We've evolved from a small family-owned business into one of the most trusted hotels in the region.</p>
                 </div>
 
                 <!-- What We Offer -->
@@ -241,10 +241,10 @@ Whether you’re here for business or leisure, every stay is designed to make yo
                 <p class="lg:text-lg text-[16px] text-left px-[16px] lg:px-[120px] pr-[0px] lg:pr-[350px]">We are here to assist you! For inquiries or bookings, feel free to contact us through the following channels:</p>
                 <div>
                     <p class="lg:text-lg text-[16px] font-bold text-left px-[16px] lg:px-[120px]">Phone: (123) 456-7890</p>
-                    <p class="lg:text-lg text-[16px] font-bold text-left px-[16px] lg:px-[120px]">Email: contact@hotelxyz.com</p>
+                    <p class="lg:text-lg text-[16px] font-bold text-left px-[16px] lg:px-[120px]">Email: contact@brockershotel.com</p>
                 </div>
                 <div class="text-left px-[16px] lg:px-[120px]">
-                    <a href="https://goo.gl/maps/xyz" target="_blank" class="text-yellow-700 font-bold">Our Location on Google Maps</a>
+                    <a href="https://goo.gl/maps/brockers" target="_blank" class="text-yellow-700 font-bold">Our Location on Google Maps</a>
                 </div>
             </div>
         </div>
