--- a/src/about.html
+++ b/src/about.html
@@ -287,7 +287,7 @@ Whether you’re here for business or leisure, every stay is designed to make yo
         <a href="#" class="text-gray-900 hover:text-white text-lg"><i class="fab fa-facebook-f text-[16px] lg:text-[24px]"></i></a>
         <a href="#" class="text-gray-900 hover:text-white text-lg"><i class="fab fa-twitter text-[16px] lg:text-[24px]"></i></a>
         <a href="#" class="text-gray-900 hover:text-white text-lg"><i class="fab fa-linkedin-in text-[16px] lg:text-[24px]"></i></a>
-        <a href="#" class="text-gray-900 hover:text-white text-lg"><i class="fab fa-github text-[16px] lg:text-[24px]"></i></a>
+        <a href="#" class="text-gray-900 hover:text-white text-lg"><i class="fa-brands fa-instagram text-[16px] lg:text-[24px]"></i></a>
       </div>
   </div>
 
