--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <a href="#" class="text-gray-900 hover:text-white text-lg"><i class="fab fa-facebook-f text-[16px] lg:text-[24px]"></i></a>
         <a href="#" class="text-gray-900 hover:text-white text-lg"><i class="fab fa-twitter text-[16px] lg:text-[24px]"></i></a>
         <a href="#" class="text-gray-900 hover:text-white text-lg"><i class="fab fa-linkedin-in text-[16px] lg:text-[24px]"></i></a>
-        <a href="#" class="text-gray-900 hover:text-white text-lg"><i class="fab fa-github text-[16px] lg:text-[24px]"></i></a>
+        <a href="#" class="text-gray-900 hover:text-white text-lg"><i class="fa-brands fa-instagram text-[16px] lg:text-[24px]"></i></a>
       </div>
   </div>
 
