--- a/src/contact.html
+++ b/src/contact.html
@@ -87,9 +87,9 @@
     </nav>
 
     <!-- Contact Section -->
-    <section id="contact" class="py-20 md:py-28 px-6 md:px-[250px] bg-gray-100">
+    <section id="contact" class="py-20 md:py-28 px-6 md:px-[250px] bg-gray-100" style="background-image: url('/assest/images/hotel-hero.jpg');">
         <div class="max-w-7xl mx-auto text-center">
-            <h2 class="text-3xl md:text-4xl font-bold mb-8">Contact <span class="text-yellow-700">Us</span></h2>
+            <h2 class="text-white text-3xl md:text-4xl font-bold mb-8">Contact <span class="text-yellow-700">Us</span></h2>
             <p class="mb-12 text-lg px-4 md:px-[100px]">We'd love to hear from you! Please fill out the form below, and we will get back to you as soon as possible.</p>
 
             <form id="contactForm" class="w-[100% mx-auto space-y-6">
