--- a/src/contact.html
+++ b/src/contact.html
@@ -90,12 +90,12 @@
     <section id="contact" class="py-20 md:py-28 px-6 md:px-[250px] bg-gray-100" style="background-image: url('/assest/images/hotel-hero.jpg');">
         <div class="max-w-7xl mx-auto text-center">
             <h2 class="text-white text-3xl md:text-4xl font-bold mb-8">Contact <span class="text-yellow-700">Us</span></h2>
-            <p class="mb-12 text-lg px-4 md:px-[100px]">We'd love to hear from you! Please fill out the form below, and we will get back to you as soon as possible.</p>
+            <p class="text-gray-100 mb-12 text-lg px-4 md:px-[100px]">We'd love to hear from you! Please fill out the form below, and we will get back to you as soon as possible.</p>
 
-            <form id="contactForm" class="w-[100% mx-auto space-y-6">
-                <input type="text" id="name" name="name" placeholder="Your Name" class="w-full px-4 py-2 border rounded-lg" required>
-                <input type="email" id="email" name="email" placeholder="Your Email" class="w-full px-4 py-2 border rounded-lg" required>
-                <textarea id="message" name="message" placeholder="Your Message" class="w-full px-4 py-2 border rounded-lg" rows="6" required></textarea>
+            <form id="contactForm" class="w-[100% mx-auto space-y-6 text-white">
+                <input type="text" id="name" name="name" placeholder="Your Name" class="w-full px-4 py-2 border border-white rounded-lg" required>
+                <input type="email" id="email" name="email" placeholder="Your Email" class="w-full px-4 py-2 border border-white rounded-lg" required>
+                <textarea id="message" name="message" placeholder="Your Message" class="w-full px-4 py-2 border border-white rounded-lg" rows="6" required></textarea>
                 <button type="submit" class="bg-yellow-700 text-white px-6 py-3 rounded-full w-full">Send Message</button>
             </form>
         </div>
