--- a/src/about.html
+++ b/src/about.html
@@ -90,7 +90,7 @@
 
     <!-- Navbar -->
    <!-- Navbar -->
-    <nav class="bg-yellow-700 text-white px-6 lg:px-[120px] py-4 lg:py-7">
+    <nav class="bg-yellow-700 text-white px-6 lg:px-[120px] py-6 lg:py-7 sticky top-0">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class=" text-[14px] lg:text-2xl font-bold">Brokers Hotel</div>
             <!-- Desktop Menu -->
