--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <title>Portfolio</title>
 
   <style>
+    .nav {
+      z-index: 200px;
+    }
         .room-card:hover {
             transform: scale(1.05);
             transition: transform 0.3s ease;
@@ -53,7 +56,7 @@
 <body class="font-sans bg-white">
 
     <!-- Navbar -->
-    <nav class="bg-yellow-700 text-white px-6 lg:px-[120px] py-6 lg:py-7 z-[100px] sticky top-0">
+    <nav class="bg-yellow-700 text-white px-6 lg:px-[120px] py-6 lg:py-7  sticky top-0">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class=" text-[14px] lg:text-2xl font-bold">Brokers Hotel</div>
             <!-- Desktop Menu -->
