--- a/src/about.html
+++ b/src/about.html
@@ -10,7 +10,9 @@
   <title>Portfolio</title>
     <style>
         /* Mobile menu positioning */
-       
+       .nav {
+      z-index: 200px;
+    }
 
         /* Navbar button and hamburger styling */
         #menuButton {
