--- a/src/about.html
+++ b/src/about.html
@@ -49,6 +49,7 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            z-index: 0;
         }
 
         .about-card h3 {
