--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body class="font-sans bg-white">
 
     <!-- Navbar -->
-    <nav class="bg-yellow-700 text-white px-6 lg:px-[120px] py-6 lg:py-7  sticky top-0">
+    <nav class="z-1 bg-yellow-700 text-white px-6 lg:px-[120px] py-6 lg:py-7  sticky top-0">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class=" text-[14px] lg:text-2xl font-bold">Brokers Hotel</div>
             <!-- Desktop Menu -->
@@ -85,7 +85,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <header class=" bg-cover bg-center h-screen py-9 lg:py-0 md:h-screen relative" style="background-image: url('/assest/images/hotel-hero.jpg');">
+    <header class="z-0 bg-cover bg-center h-screen py-9 lg:py-0 md:h-screen relative" style="background-image: url('/assest/images/hotel-hero.jpg');">
         <div class="absolute inset-0 bg-black opacity-50"></div>
         <div class=" hero-content relative z-10 text-white">
             <h1 class=" text-[34px] lg:text-[60px]    font-extrabold px-[18px]  lg:px-[150px] mb-3 lg:mb-4">Welcome to Brokers Hotel</h1>
@@ -95,7 +95,7 @@
     </header>
 
     <!-- Rooms Section -->
-    <section id="rooms" class=" py-14 px-[16px] md:px-[100px]">
+    <section id="rooms" class="z-0 py-14 px-[16px] md:px-[100px]">
         <div class="max-w-7xl mx-auto text-center">
             <h2 class="scroll-animation text-[26px]  lg:text-4xl font-bold mb-3 lg:pb-8 ">Our <span class="text-yellow-800">Rooms</span></h2>
             <p class="scroll-animation mb-12 text-gray-800 text-[14px] lg:text-lg px-4 lg:px-41">Choose from a range of rooms tailored to fit your needs and comfort. Each room is designed to offer the best experience during your stay.</p>
@@ -142,7 +142,7 @@
     </section>
 
     <!-- Booking Form Section -->
-    <section id="booking" class="bg-gray-50 py-20 px-[16px] md:px-[100px]">
+    <section id="booking" class="z-0 bg-gray-50 py-20 px-[16px] md:px-[100px]">
         <div class="max-w-7xl mx-auto  text-center">
             <h2 class="scroll-animation text-[26px] lg:text-4xl font-bold mb-8">Book <span class="text-yellow-800">Your</span> Stay</h2>
             <form id="bookingForm" class="space-y-6 max-w-lg mx-auto ">
