--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <style>
     .nav {
-      z-index: 200px;
+      z-index: 999;
     }
         .room-card:hover {
             transform: scale(1.05);
@@ -57,7 +57,7 @@
 <body class="font-sans bg-white">
 
     <!-- Navbar -->
-    <nav class="z-1 bg-yellow-700 text-white px-6 lg:px-[120px] py-6 lg:py-7  sticky top-0">
+    <nav class="z-50 bg-yellow-700 text-white px-6 lg:px-[120px] py-6 lg:py-7  sticky top-0">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class=" text-[14px] lg:text-2xl font-bold">Brokers Hotel</div>
             <!-- Desktop Menu -->
