--- a/src/about.html
+++ b/src/about.html
@@ -11,7 +11,7 @@
     <style>
         /* Mobile menu positioning */
        .nav {
-      z-index: 200px;
+      z-index: 999;
     }
 
         /* Navbar button and hamburger styling */
@@ -93,7 +93,7 @@
 
     <!-- Navbar -->
    <!-- Navbar -->
-    <nav class="bg-yellow-700 text-white px-6 lg:px-[120px] py-6 lg:py-7 sticky top-0 z-[200px]">
+    <nav class="bg-yellow-700 text-white px-6 lg:px-[120px] py-6 lg:py-7 sticky top-0 z-50">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <div class=" text-[14px] lg:text-2xl font-bold">Brokers Hotel</div>
             <!-- Desktop Menu -->
