--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <header class="z-0 bg-cover bg-center max-h-[75vh] md:max-h-screen  h-screen py-9 lg:py-0 md:h-screen relative" style="background-image: url('/assest/images/hotel-hero.jpg');">
+    <header class="z-0 bg-cover bg-center max-h-[400px] md:max-h-screen  h-screen py-9 lg:py-0 md:h-screen relative" style="background-image: url('/assest/images/hotel-hero.jpg');">
         <div class="absolute inset-0 bg-black opacity-50"></div>
         <div class=" hero-content relative z-10 text-white">
             <h1 class=" text-[34px] lg:text-[60px]    font-extrabold px-[18px]  lg:px-[150px] mb-3 lg:mb-4">Welcome to Brokers Hotel</h1>
