Update HTML structure and Tailwind CSS integration

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <!-- Tailwind CSS from CDN -->
+<link href="https://cdn.tailwindcss.com" rel="stylesheet">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-f4b8T+QX6qC9nN2Fh3rjHptF77w4j+z/ZT6wU1r6ef5LkE8tEe/fM7kS76RmFJpMefG1xg5Tq8P4+cO7hNns7A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
    <link rel="stylesheet" href="/assest/libary/fontawesome-free-6.7.2-web/css/all.min.css" />
@@ -42,7 +45,7 @@
         #menuButton {
             z-index: 1000;
         }
-
+    
         /* Ensure the hamburger is always visible */
         .hamburger-container {
             position: relative;
@@ -85,7 +88,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <header class="z-0 bg-cover bg-center max-h-screen md:max-h-screen  h-max-content py-[250px] lg:py-0 md:h-screen relative" style="background-image: url('/assest/images/hotel-hero.jpg');">
+    <header class="z-0 bg-cover bg-center max-h-screen md:max-h-screen  h-[75vh] py-9 lg:py-0 md:h-screen relative" style="background-image: url('/assest/images/hotel-hero.jpg');">
         <div class="absolute inset-0 bg-black opacity-50"></div>
         <div class=" hero-content relative  z-10 text-white">
             <h1 class=" text-[34px] lg:text-[60px]    font-extrabold px-[18px]  lg:px-[150px] mb-3 lg:mb-4">Welcome to Brokers Hotel</h1>
