Add responsive styles for header in mobile view
Added media query for smaller screens to adjust header height.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         .nav-link:hover {
             color: #FBBF24;
         }
+
+    @media (max-width: 480px) {
+  .header {
+    /* Smaller text */
+     height: 75vh;      /* Adjust padding */
+  }
+}
         .hero-content {
             display: flex;
             flex-direction: column;
